# deep-research-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  evaluation.md  pyproject.toml
docs/: architecture.mmd  references.md  sample_request.json
schemas/: request.schema.json  response.schema.json
scripts/: import_workflow.sh  init-db.sql  query_suite.json  run_demo.sh  run_engine.py  run_eval.py
src/research_agent/: __init__.py  budget.py  memory.py  models.py  orchestrator.py  retrieval.py  synthesis.py  token_utils.py  verifier.py
tests/: test_budget.py  test_engine.py  test_memory.py
workflows/: g3_deep_research.workflow.json
